--- a/Bestt/css/custom.css
+++ b/Bestt/css/custom.css
@@ -320,13 +320,13 @@ header#war-header{
 .right-image{
 	position:absolute;
 	right:0;
-	bottom:0;
+	bottom:-15px;
 	width:31%;
 }
 .left-image{
 	position:absolute;
 	left: -18px;
-    bottom: 0;
+    bottom: -6px;
     width: 48%;
 }
 
@@ -370,17 +370,22 @@ header#war-header{
 	font-size:45px;
 	font-weight:bold;
 	border-radius:5px;
+	transition:all ease-in-out 0.2s;
+	-webkit-transition:all ease-in-out 0.2s;
+	-o-transition:all ease-in-out 0.2s;
+	-moz-transition:all ease-in-out 0.2s;
+	-ms-transition:all ease-in-out 0.2s;
 }
 .war-btn-area ul li:first-child a{
 	background:rgba(30,30,30,0.5);
 }
+.war-btn-area ul li a:hover{
+	background:#ff00a8;
+	color:#fff;
+}
 
 
-
-/*===============================================================
-warning page end
-=================================================================
-*/
+/*------------------------------------scroll section -----------------------------*/
 
 .nano {
   position : relative;
@@ -449,4 +454,28 @@ warning page end
     margin-top: 20px;
 }
 .nano .content { padding: 24px; }
+
+
+/*===============================================================
+footer war start
+=================================================================
+*/
+
+#war-footer{
+	width:100%;
+	background:#000;
+	height:300px;
+	border-top:12px solid #ff00a8;
+}
+
+/*===============================================================
+footer war end
+=================================================================
+*/
+
+
+/*===============================================================
+warning page end
+=================================================================
+*/
 
