--- a/Tax-aloke/HTML/css/custom.css
+++ b/Tax-aloke/HTML/css/custom.css
@@ -1149,11 +1149,12 @@ common portion end
 	padding-top: 20px !important;
 }
 ul.relief {
-	padding: 30px 0 0 30px;
+	padding: 30px 0 0 5px;
 }
 ul.relief li {
-	padding-bottom: 10px;
-	color: #fff;
+    color: #fff;
+    line-height: 22px;
+    padding-bottom: 10px;
 }
 ul.relief li i {
 	padding-right: 5px;
@@ -1469,4 +1470,39 @@ h2.top_text {
 .testimonial-meta p{
 	line-height: 36px;
 	color: #048e64;
+}
+
+/* ------------------------------ patners ------------------------------------------ */
+
+.partners-contenet-box{
+	padding: 80px 0;
+}
+.partners-contenet-box p{
+    border-left: 15px solid #03143c;
+    color: #626262;
+    font-family: Helvetica Neue,Helvetica,Arial,sans-serif !important;
+    font-size: 19px;
+    font-style: italic;
+    line-height: 28px;
+    margin-top: 25px;
+    padding: 25px 19px;
+}
+.advantages-box-img {
+    float: left;
+    width: 150px;
+}
+.advantages-box-cont {
+    float: right;
+    width: 85%;
+}
+.advantages-box-col{
+	padding: 40px 0 8px 0;
+}
+.advantages-box-col h3{
+	color: #626262;
+    font-size: 24px;
+}
+.advantages-box-col p {
+    font-size: 15px;
+    line-height: 30px;
 }
