--- a/Uniterrene2017/css/common.css
+++ b/Uniterrene2017/css/common.css
@@ -1,332 +1,1 @@
-
-
-@font-face {
-	font-family: Helvetica Neue,Helvetica,Arial,sans-serif !important;
-	src: url(../fonts/HelveticaNeue.ttf);
-}
-/*font-family: 'Dancing Script', cursive;*/
-*{
-box-sizing:border-box	
-	}
-
-body{
-	margin:0;
-	padding:0 !important;
-    font-family: Helvetica Neue,Helvetica,Arial,sans-serif !important;
-   }
-
-body,html{
-	font-size:16px;
-	height: 100%
-}
-
-
-div,table,tr,th,td,th,video,audio,h1,h2,h3,h4,h5,h6,aside,canvas,section,header,footer,nav,span,p,small,big,a,b,strong,img,hr,pre,button,input,textarea,optgroup,ul,li,ol,select,option,blockquote,nav{
-	margin:0;
-	padding:0;
-	outline:none;
-	border:none;
-	text-decoration:none;
-	list-style-type:none;
-}
-
-.clearfix:after {
-	content:"";
-	display:block;
-	height:0;
-	clear:both;
-	font-size:0;
-	}
-.clear{
-	clear:both
-	}
-
-.container{
-    margin:0 auto;
-	padding:0 0px;
-}	
-
-		
-.row{
-	width:100%;
-	margin:10px auto
-	}
-img {
-	max-width:100%;
-	}	
-h1,h2,h3,h4,h5,h6{
-	-webkit-font-smoothing: antialiased;
-	font-family: Helvetica Neue,Helvetica,Arial,sans-serif !important;
-}		
-	
-
-h1{
-	
-	 font-weight:normal;
-	 font-size:  4.5rem;
-	}
-h2{
-	
-	font-weight:normal;
-	font-size: 3.438rem;
-
-	}
-h3{
-	 font-weight:normal;
-	 font-size: 2rem;
-	 color: #2d2d2d
-	}
-		
-h4{
-	font-size: 1.438rem;
-	font-weight: normal;
-}
-h5{
-	font-size: 1.25rem;
-	font-weight: normal;
-}
-
- 
-		
-p{
-	
-	font-size:16px;
-	line-height:26px;
-	font-weight:normal;
-	text-align:center;
-	margin:15px 0
-}
-
-	
-input,textarea,select {
-	width:100%;
-	height:42px;
-	border-radius:0;
-	text-indent:5px;
-	transition:all .5s ease;
-	-moz-transition:all .5s ease;
-	-webkit-transition:all .5s ease;
-	-o-transition:all .5s ease;
-	-ms-transition:all .5s ease;
-	color:#575555;
-	font-size:15px;
-	background:rgba(19,32,43,1);
-	border:1px solid #304d65;
-	}
-
-input:focus,textarea:focus,select:focus{
-	background:rgba(255,255,255,0.93);
-	}
-	
-input[type="submit"]{
-	width:100%;
-	background:transparent;
-	color:#ffffff;
-	text-align:center;
-	line-height:45px;
-	font-size:18px;
-	cursor:pointer;
-	transition:all .5s ease;
-	-moz-transition:all .5s ease;
-	-webkit-transition:all .5s ease;
-	-o-transition:all .5s ease;
-	-ms-transition:all .5s ease;
-}
-button{
-	width: 100%;
-	height: 45px;
-	background: #f4b318;
-	border: 1px solid #dcdcdc;
-	margin-top:10px;
-	transition:all .5s ease;
-	-moz-transition:all .5s ease;
-	-webkit-transition:all .5s ease;
-	-o-transition:all .5s ease;
-	-ms-transition:all .5s ease;
-	color: #0a131b;
-	font-size: 16px;
-	text-transform: uppercase;
-	cursor: pointer;
-}
-button:hover{
-	background: #b8860e
-}
-input[type="submit"]:hover{
-	background:#FFF;
-	color:#f8db3a;
-}
-.content{
-	text-align:center;
-}
-		
-	
-	
-	
-::-moz-placeholder{
-	color:#aaaaaa;
-	font-size: 12px;
-	}
-::-ms-placeholder{
-	color:#aaaaaa;
-	font-size: 12px;
-	}
-::-webkit-placeholder{
-	color:#aaaaaa;
-	font-size: 12px;
-	}
-::-0-placeholder{
-	color:#aaaaaa;
-	font-size: 12px;
-	}
-	
-
-
-::selection{
-	background:#f2ac04;
-	color:#1d1d1d;
-	}
-::-moz-selection{
-	background:#f2ac04;
-	color:#1d1d1d;
-	}
-::-webkit-selection{
-	background:#f2ac04;
-	color:#1d1d1d;
-	}
-::-o-selection{
-	background:#f2ac04;
-	color:#1d1d1d;
-	}
-::-ms-selection{
-	background:#f2ac04;
-	color:#1d1d1d;
-	}				
-	
-	
-.f_left{
-	float:left;
-}
-.f_right{
-	float:right;
-}
-
-a.btn_bor{
-	background:transparent;
-	color:#ffffff;
-	text-align:center;
-	
-	font-size:17px;
-	padding: 15px 25px;
-	transition:all .3s ease;
-	-moz-transition:all .3s ease;
-	-webkit-transition:all .3s ease;
-	-o-transition:all .3s ease;
-	-ms-transition:all .3s ease;
-	margin-left:auto;
-	margin-right:auto;
-	display:block;
-	
-	border:1px solid #fff;
-	text-transform: uppercase;
-	position: relative;
-	
-}
-a.btn_bor:after{
-	content: '';
-	position: absolute;
-	/*background:url(../images/triangle.png) no-repeat center center;*/
-	right: -1px;
-	bottom: -1px;
-	width: 0;
-	height: 0;
-	transition:all .3s ease;
-	-moz-transition:all .3s ease;
-	-webkit-transition:all .3s ease;
-	-o-transition:all .3s ease;
-	-ms-transition:all .3s ease;
-	border-right:22px solid #f2ac04;
-	border-top:24px solid transparent;
-	border-bottom:0px solid transparent;
-}
-a.btn_bor:hover{
-	background:rgba(242,172,4,1);
-	border: 1px solid transparent;
-	color: #191919
-}
-a.btn_bor:hover:after{
-	border-right:22px solid #fff;
-	border-top:24px solid transparent;
-	border-bottom:0px solid transparent;
-}
-
-a.btn_without_bor{
-	background:#f2ac04;
-	color:#191919;
-	text-align:center;
-	
-	font-size:17px;
-	padding: 15px 25px;
-	transition:all .3s ease;
-	-moz-transition:all .3s ease;
-	-webkit-transition:all .3s ease;
-	-o-transition:all .3s ease;
-	-ms-transition:all .3s ease;
-	margin-left:auto;
-	margin-right:auto;
-	display:block;
-	
-	border:1px solid transparent;
-	text-transform: uppercase;
-	position: relative;
-	}
-a.btn_without_bor:after{
-	content: '';
-	position: absolute;
-	/*background:url(../images/triangle.png) no-repeat center center;*/
-	right: -1px;
-	bottom: -1px;
-	width: 0;
-	height: 0;
-	transition:all .3s ease;
-	-moz-transition:all .3s ease;
-	-webkit-transition:all .3s ease;
-	-o-transition:all .3s ease;
-	-ms-transition:all .3s ease;
-	border-right:22px solid #191919;
-	border-top:24px solid transparent;
-	border-bottom:0px solid transparent;
-}
-a.btn_without_bor:hover{
-	background:transparent;
-	border: 1px solid #f2ac04;
-	color: #191919
-}
-a.btn_without_bor:hover:after{
-	border-right:22px solid #f2ac04;
-	border-top:24px solid transparent;
-	border-bottom:0px solid transparent;
-}
-
-
-.read_more{
-	color:#faa013;
-	font-size:15px
-	}
-.read_more:hover{
-	text-decoration:underline
-	}	
-
-.content{
-	margin-top: 40px
-}
-.btn{
-	float: right;
-}	
-
-.divider{
-	width: 100%;
-	height: 1px;
-	background: #203140;
-	margin: 15px 0
-}
-
+body,h1,h2,h3,h4,h5,h6{font-family:Helvetica Neue,Helvetica,Arial,sans-serif!important}h1,h2,h3,h4,h5,p{font-weight:400}.content,p{text-align:center}@font-face{font-family:Helvetica Neue,Helvetica,Arial,sans-serif!important;src:url(../fonts/HelveticaNeue.ttf)}*{box-sizing:border-box}body{margin:0;padding:0!important}body,html{font-size:16px;height:100%}a,aside,audio,b,big,blockquote,button,canvas,div,footer,h1,h2,h3,h4,h5,h6,header,hr,img,input,li,nav,ol,optgroup,option,p,pre,section,select,small,span,strong,table,td,textarea,th,tr,ul,video{margin:0;padding:0;outline:0;border:none;text-decoration:none;list-style-type:none}.clearfix:after{content:"";display:block;height:0;clear:both;font-size:0}.clear{clear:both}.container{margin:0 auto;padding:0}.row{width:100%;margin:10px auto}img{max-width:100%}h1,h2,h3,h4,h5,h6{-webkit-font-smoothing:antialiased}h1{font-size:4.5rem}h2{font-size:3.438rem}h3{font-size:2rem;color:#2d2d2d}h4{font-size:1.438rem}h5{font-size:1.25rem}p{font-size:16px;line-height:26px;margin:15px 0}input,select,textarea{width:100%;height:42px;border-radius:0;text-indent:5px;transition:all .5s ease;-moz-transition:all .5s ease;-webkit-transition:all .5s ease;-o-transition:all .5s ease;-ms-transition:all .5s ease;color:#575555;font-size:15px;background:rgba(19,32,43,1);border:1px solid #304d65}input:focus,select:focus,textarea:focus{background:rgba(255,255,255,.93)}input[type=submit]{width:100%;background:0 0;color:#fff;text-align:center;line-height:45px;font-size:18px;cursor:pointer;transition:all .5s ease;-moz-transition:all .5s ease;-webkit-transition:all .5s ease;-o-transition:all .5s ease;-ms-transition:all .5s ease}button{width:100%;height:45px;background:#f4b318;border:1px solid #dcdcdc;margin-top:10px;transition:all .5s ease;-moz-transition:all .5s ease;-webkit-transition:all .5s ease;-o-transition:all .5s ease;-ms-transition:all .5s ease;color:#0a131b;font-size:16px;text-transform:uppercase;cursor:pointer}a.btn_bor:after,a.btn_without_bor:after{content:'';right:-1px;bottom:-1px;width:0;height:0}button:hover{background:#b8860e}input[type=submit]:hover{background:#FFF;color:#f8db3a}.content{margin-top:40px}::-moz-placeholder{color:#aaa;font-size:12px}::-ms-placeholder{color:#aaa;font-size:12px}::-webkit-placeholder{color:#aaa;font-size:12px}::-0-placeholder{color:#aaa;font-size:12px}a.btn_bor,a.btn_without_bor{text-align:center;font-size:17px;padding:15px 25px;margin-left:auto;margin-right:auto;display:block;text-transform:uppercase}::selection{background:#f2ac04;color:#1d1d1d}::-moz-selection{background:#f2ac04;color:#1d1d1d}::-webkit-selection{background:#f2ac04;color:#1d1d1d}::-o-selection{background:#f2ac04;color:#1d1d1d}::-ms-selection{background:#f2ac04;color:#1d1d1d}.f_left{float:left}.btn,.f_right{float:right}a.btn_bor{background:0 0;color:#fff;transition:all .3s ease;-moz-transition:all .3s ease;-webkit-transition:all .3s ease;-o-transition:all .3s ease;-ms-transition:all .3s ease;border:1px solid #fff;position:relative}a.btn_bor:after{position:absolute;transition:all .3s ease;-moz-transition:all .3s ease;-webkit-transition:all .3s ease;-o-transition:all .3s ease;-ms-transition:all .3s ease;border-right:22px solid #f2ac04;border-top:24px solid transparent;border-bottom:0 solid transparent}a.btn_bor:hover{background:rgba(242,172,4,1);border:1px solid transparent;color:#191919}a.btn_bor:hover:after{border-right:22px solid #fff;border-top:24px solid transparent;border-bottom:0 solid transparent}a.btn_without_bor{background:#f2ac04;color:#191919;transition:all .3s ease;-moz-transition:all .3s ease;-webkit-transition:all .3s ease;-o-transition:all .3s ease;-ms-transition:all .3s ease;border:1px solid transparent;position:relative}a.btn_without_bor:after{position:absolute;transition:all .3s ease;-moz-transition:all .3s ease;-webkit-transition:all .3s ease;-o-transition:all .3s ease;-ms-transition:all .3s ease;border-right:22px solid #191919;border-top:24px solid transparent;border-bottom:0 solid transparent}a.btn_without_bor:hover{background:0 0;border:1px solid #f2ac04;color:#191919}a.btn_without_bor:hover:after{border-right:22px solid #f2ac04;border-top:24px solid transparent;border-bottom:0 solid transparent}.read_more{color:#faa013;font-size:15px}.read_more:hover{text-decoration:underline}.divider{width:100%;height:1px;background:#203140;margin:15px 0}
