--- a/ascend/css/custom.css
+++ b/ascend/css/custom.css
@@ -9,18 +9,18 @@ common portion start
 
 
 
-@font-face {
+/*@font-face {
 	font-family: FjallaOne-Regular;
 	src: url(../fonts/FjallaOne-Regular.ttf);
-}
-@font-face {
+}*/
+/*@font-face {
 	font-family: Lato-Regular;
 	src: url(../fonts/Lato-Regular.ttf);
 }
 @font-face {
 	font-family: Lato-Bold;
 	src: url(../fonts/Lato-Bold.ttf);
-}
+}*/
 /*@font-face {
 	font-family:Raleway-SemiBold;
 	src: url(../fonts/Raleway-SemiBold.ttf);
@@ -69,7 +69,7 @@ img {
 	max-width: 100%;
 }
 h1, h2, h3, h4, h5, h6 {
-	font-family: FjallaOne-Regular;
+	font-family: 'Fjalla One', sans-serif;
 	font-weight: normal;
 	word-spacing: 10px;
 	color: #2a2a2a;
@@ -103,7 +103,7 @@ h5 {
 h6 {
 }
 p {
-	font-family: 'PT Sans', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 16px;
 	line-height: 25px;
 	font-weight: normal;
@@ -558,11 +558,11 @@ a.btn-get-started:after {
 /*! margin-right: 20px; */
 }
 .nav_section .topHeader .ulSet li.phone a {
-	font-family: FjallaOne-Regular;
+	font-family: 'Fjalla One', sans-serif;
 	font-size: 18px;/*! padding-right: 30px; */
 }
 .nav_section .topHeader .ulSet li.user a {
-	font-family: Lato-Regular;
+	font-family: 'Lato', sans-serif;
 	font-size: 13px;
 	text-transform: uppercase;
 }
@@ -1616,7 +1616,7 @@ ul.featuresLi {
 	padding: 5% 0 0;
 }
 .footer_back h5 {
-	font-family: Lato-Regular;
+	font-family: 'Lato', sans-serif;
 	font-size: 24px;
 	color: #fff;
 	text-transform: uppercase;
@@ -1635,8 +1635,9 @@ ul.featuresLi {
 .footer_back h3 {
 	color: #fff;
 	font-size: 16px;
-	font-family: Lato-Bold;
+	font-family: 'Lato', sans-serif;
 	text-align: left;
+	font-weight: 700;
 }
 .footer_row h3 {
 	position: relative;
@@ -1656,7 +1657,7 @@ ul.featuresLi {
 }
 .footer_row ul li a {
 	color: #c6c6c6;
-	font-family: Lato-Regular;
+	font-family: 'Lato', sans-serif;
 	font-size: 15px;
 	position: relative;
 	padding: 5px 0 5px 15px;
@@ -1707,7 +1708,8 @@ ul.featuresLi {
 }
 .contact_sec ul li span {
 	font-size: 14px;
-	font-family: Lato-Bold;
+	font-family: 'Lato', sans-serif;
+	font-weight: bold
 }
 .contact_sec ul li.footer_owned {
 	padding-top: 30px;
@@ -1742,7 +1744,7 @@ ul.featuresLi {
 	text-align: left;
 	text-transform: none;
 	padding-bottom: 0px;
-	font-family: Lato-Regular;
+	font-family: 'Lato', sans-serif;
 	word-spacing: 2px;
 	transition: all .3s ease-in;
 	-webkit-transition: all .3s ease-in;
